# backend_pedidos-now

./: .pdm-python  Procfile  README.md  db.sqlite3  manage.py  pedidos.json  pyproject.toml  requirements.txt
apppedidosnow/: admin.py  apps.py  models.py  serializers.py  views.py
apppedidosnow/migrations/: 0001_initial.py  0002_produto.py  0003_produto_gramas.py  0004_remove_produto_isbn_produto_código.py  0005_alter_produto_código.py  0006_pedido_remove_produto_código_produto_isbn_and_more.py  0007_pedido_cliente_pedido_mesa.py
apppedidosnow/models/: __init__.py  pedido.py  produto.py
apppedidosnow/serializers/: __init__.py  categoria.py  pedido.py  produto.py
apppedidosnow/views/: __init__.py  categoria.py  pedido.py  produto.py
pedidosnow/: asgi.py  settings.py  urls.py  wsgi.py
